#3 [del] : 린트 제거